--- a/web/indexInterface.xhtml
+++ b/web/indexInterface.xhtml
@@ -62,7 +62,7 @@
             <br></br>
             <ui:insert name="company">Demo 2018</ui:insert>
             <br></br>
-            <ui:insert name="developers">by Green Apps Z.A.Z</ui:insert>
+            <ui:insert name="developers">by Green Apps Zz.A.Z</ui:insert>
         </div>
 
     </h:body>
